fix overflow del main content

--- a/css/animation.css
+++ b/css/animation.css
@@ -13,6 +13,9 @@
 }
 .page {
   display: none;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
 .page.active {
   display: flex;
